# trip-tool

./: .gitignore  README.md  setup.bat  setup.ps1  start.bat  start.ps1
backend/: config.example.yaml  pyproject.toml
backend/src/: __init__.py  agent.py  config.py  main.py  models.py  prompts.py
backend/src/core/: __init__.py  events.py  llm_task.py  pipeline.py
backend/src/execution/: __init__.py  scheduler.py  tool_runner.py
backend/src/llm/: __init__.py  base.py  loader.py
backend/src/llm/adapters/: __init__.py  _utils.py  anthropic_adapter.py  openai_compat.py
backend/src/llm_tasks/: __init__.py  itinerary_task.py  plan_task.py  report_task.py  summarize_task.py
backend/src/stages/: __init__.py  compose_stage.py  execute_stage.py  plan_stage.py
backend/src/tools/: __init__.py  base.py  cache.py  weather.py
backend/src/tools/maps/: __init__.py  client.py  directions.py  distance_matrix.py  geocoding.py  places.py  results.py
docs/: ARCHITECTURE.md
frontend/: .env.local.example  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  env.d.ts  style.css
frontend/src/components/: ActivityLog.vue  HistoryPanel.vue  ItineraryView.vue  PlacesView.vue  ReportView.vue  TaskTimeline.vue  TopicForm.vue
frontend/src/services/: history.ts  sse.ts
frontend/src/stores/: research.ts
frontend/src/types/: events.ts
